@@ -3185,8 +3185,8 @@ focus_tree = {
 			}
 		}
 	}
-	####Industrial####
 
+	# Industrial Focuses
 	focus = {
 		id = NIG_bankers_of_africa
 		icon = money
@@ -3205,6 +3205,7 @@ focus_tree = {
 			change_fossil_fuel_industry_opinion = yes
 			change_international_bankers_opinion = yes
 			change_industrial_conglomerates_opinion = yes
+
 			set_temp_variable = { treasury_change = -12 }
 			modify_treasury_effect = yes
 			334 = { #Lagos
@@ -3219,6 +3220,18 @@ focus_tree = {
 
 		ai_will_do = {
 			base = 1
+			modifier = {
+				add = 15
+				check_variable = { interest_rate < 8 }
+			}
+			modifier = {
+				add = 15
+				OR = {
+					check_variable = { small_medium_business_owners_opinion < 49 }
+					check_variable = { international_bankers_opinion < 49 }
+					check_variable = { industrial_conglomerates_opinion < 49 }
+				}
+			}
 		}
 	}
 
@@ -3242,6 +3255,10 @@ focus_tree = {
 
 		ai_will_do = {
 			base = 1
+			modifier = {
+				add = 15
+				has_political_power < 100
+			}
 		}
 	}
 
@@ -3274,6 +3291,10 @@ focus_tree = {
 
 		ai_will_do = {
 			base = 1
+			modifier = {
+				factor = 2
+				check_variable = { total_unemployed_percentage_display > 3 }
+			}
 		}
 	}
 
@@ -3344,10 +3365,48 @@ focus_tree = {
 				}
 				add_extra_state_shared_building_slots = 1
 			}
+
+			custom_effect_tooltip = if_small_medium_business_owners_opinion_at_least_positive_tt
+			effect_tooltip = {
+				334 = {
+					add_building_construction = {
+						type = offices
+						level = 1
+						instant_build = yes
+					}
+				}
+			}
+			hidden_effect = {
+				if = { limit = { small_medium_business_owners_opinion > 49 }
+					334 = {
+						add_building_construction = {
+								type = offices
+							level = 1
+							instant_build = yes
+						}
+					}
+				}
+			}
 		}
 
 		ai_will_do = {
 			base = 1
+			modifier = {
+				add = 10
+				check_variable = { small_medium_business_owners_opinion > 49 }
+			}
+			modifier = {
+				factor = 2
+				check_variable = { total_unemployed_percentage_display > 3 }
+			}
+			modifier = {
+				factor = 2
+				check_variable = { total_unemployed_percentage_display > 5 }
+			}
+			modifier = {
+				factor = 2
+				check_variable = { total_unemployed_percentage_display > 7 }
+			}
 		}
 	}
 
@@ -3368,12 +3427,16 @@ focus_tree = {
 
 		completion_reward = {
 			log = "[GetDateText]: [This.GetName]: focus NIG_reform_water_legislation"
-			add_stability = 0.015
+			add_stability = 0.05
 			add_political_power = 150
 			set_temp_variable = { temp_opinion = 5 }
 			change_oligarchs_opinion = yes
+			change_farmers_opinion = yes
 			set_temp_variable = { temp_opinion = -5 }
 			change_small_medium_business_owners_opinion = yes
+			change_industrial_conglomerates_opinion = yes
+			change_international_bankers_opinion = yes
+
 			hidden_effect = {
 				add_opinion_modifier = { target = NGR modifier = lake_niger_shared }
 				add_opinion_modifier = { target = CHA modifier = lake_niger_shared }
@@ -3424,6 +3487,7 @@ focus_tree = {
 			change_industrial_conglomerates_opinion = yes
 			change_international_bankers_opinion = yes
 			change_fossil_fuel_industry_opinion = yes
+
 			add_opinion_modifier = { target = NGR modifier = lake_niger_exploited }
 			add_opinion_modifier = { target = CHA modifier = lake_niger_exploited }
 			add_opinion_modifier = { target = CAM modifier = lake_niger_exploited }
@@ -3531,6 +3595,18 @@ focus_tree = {
 
 		ai_will_do = {
 			base = 1
+			modifier = {
+				factor = 2
+				check_variable = { total_unemployed_percentage_display > 3 }
+			}
+			modifier = {
+				factor = 2
+				check_variable = { total_unemployed_percentage_display > 5 }
+			}
+			modifier = {
+				factor = 2
+				check_variable = { total_unemployed_percentage_display > 7 }
+			}
 		}
 	}
 
@@ -3558,6 +3634,18 @@ focus_tree = {
 
 		ai_will_do = {
 			base = 1
+			modifier = {
+				factor = 2
+				check_variable = { literacy_rate < 0.55 }
+			}
+			modifier = {
+				factor = 2
+				check_variable = { literacy_rate < 0.65 }
+			}
+			modifier = {
+				factor = 2
+				check_variable = { literacy_rate < 0.75 }
+			}
 		}
 	}
 
@@ -3598,6 +3686,10 @@ focus_tree = {
 				add = 10
 				has_at_least_regional_power_status = yes
 			}
+			modifier = {
+				add = 5
+				check_variable = { interest_rate < 8 }
+			}
 		}
 	}
 
@@ -3634,6 +3726,10 @@ focus_tree = {
 
 		ai_will_do = {
 			base = 1
+			modifier = {
+				add = 5
+				337 = { infrastructure < 3 }
+			}
 		}
 	}
 
@@ -3659,6 +3755,13 @@ focus_tree = {
 
 		ai_will_do = {
 			base = 1
+			modifier = {
+				add = 5
+				OR = {
+					check_variable = { oligarchs_opinion < 49 }
+					check_variable = { farmers_opinion < 49 }
+				}
+			}
 		}
 	}
 
@@ -3682,10 +3785,20 @@ focus_tree = {
 			change_farmers_opinion = yes
 			set_temp_variable = { temp_opinion = 15 }
 			change_small_medium_business_owners_opinion = yes
+			change_industrial_conglomerates_opinion = yes
+			change_international_bankers_opinion = yes
 		}
 
 		ai_will_do = {
 			base = 1
+			modifier = {
+				add = 5
+				OR = {
+					check_variable = { small_medium_business_owners_opinion < 49 }
+					check_variable = { industrial_conglomerates_opinion < 49 }
+					check_variable = { international_bankers_opinion < 49 }
+				}
+			}
 		}
 	}
 
@@ -3739,10 +3852,18 @@ focus_tree = {
 			one_random_arms_factory = yes
 			set_temp_variable = { temp_opinion = 5 }
 			change_defense_industry_opinion = yes
+			change_the_military_opinion = yes
 		}
 
 		ai_will_do = {
 			base = 1
+			modifier = {
+				add = 5
+				OR = {
+					check_variable = { defense_industry_opinion < 49 }
+					check_variable = { the_military_opinion < 49 }
+				}
+			}
 		}
 	}
 
@@ -3773,6 +3894,18 @@ focus_tree = {
 
 		ai_will_do = {
 			base = 1
+			modifier = {
+				add = 25
+				has_idea = depression
+			}
+			modifier = {
+				add = 15
+				has_idea = recession
+			}
+			modifier = {
+				add = 5
+				has_idea = stagnation
+			}
 		}
 	}
 
@@ -3810,6 +3943,19 @@ focus_tree = {
 
 		ai_will_do = {
 			base = 1
+			modifier = {
+				add = 5
+				OR = {
+					check_variable = { the_clergy_opinion < 49 }
+					check_variable = { labour_unions_opinion < 49 }
+					check_variable = { communist_cadres_opinion < 49 }
+					check_variable = { small_medium_business_owners_opinion < 49 }
+					check_variable = { international_bankers_opinion < 49 }
+					check_variable = { farmers_opinion < 49 }
+					check_variable = { oligarchs_opinion < 49 }
+					check_variable = { landowners_opinion < 49 }
+				}
+			}
 		}
 	}
 
@@ -3916,6 +4062,11 @@ focus_tree = {
 				add = 10
 				check_variable = { resource_imported@oil > 0 }
 			}
+			modifier = {
+				add = 10
+				owns_state = 322
+				has_full_control_of_state = 322
+			}
 		}
 	}
 
@@ -3933,15 +4084,23 @@ focus_tree = {
 		prerequisite = { focus = NIG_resource_drives }
 		search_filters = { FOCUS_FILTER_RESEARCH }
 
-		ai_will_do = {
-			base = 1
-		}
 		completion_reward = {
 			log = "[GetDateText]: [This.GetName]: focus NIG_homegrown_design"
 			add_ideas = scientific_advances2
 			set_temp_variable = { temp_opinion = 5 }
 			change_defense_industry_opinion = yes
 			change_the_military_opinion = yes
+		}
+
+		ai_will_do = {
+			base = 1
+			modifier = {
+				add = 10
+				OR = {
+					check_variable = { defense_industry_opinion < 49 }
+					check_variable = { the_military_opinion < 49 }
+				}
+			}
 		}
 	}
 
@@ -3999,41 +4158,39 @@ focus_tree = {
 		prerequisite = { focus = NIG_spur_regional_development }
 		search_filters = { FOCUS_FILTER_INDUSTRY }
 
-		ai_will_do = {
-			base = 1
-		}
-
 		completion_reward = {
 			log = "[GetDateText]: [This.GetName]: focus NIG_west_african_highways"
 			set_temp_variable = { treasury_change = -7 }
 			modify_treasury_effect = yes
-			random_owned_state = {
+
+			every_owned_state = {
 				limit = {
 					free_building_slots = {
 						building = infrastructure
 						size > 0
 					}
 				}
-				prioritize = { 334 }
+				prioritize = { 334 340 }
+				random_select_amount = 2
 				add_building_construction = {
 					type = infrastructure
 					level = 1
 					instant_build = yes
 				}
 			}
-			random_owned_state = {
-				limit = {
-					free_building_slots = {
-						building = infrastructure
-						size > 0
-					}
+		}
+
+		ai_will_do = {
+			base = 1
+			modifier = {
+				add = 10
+				any_owned_state = {
+					infrastructure < 3
 				}
-				prioritize = { 340 }
-				add_building_construction = {
-					type = infrastructure
-					level = 1
-					instant_build = yes
-				}
+			}
+			modifier = {
+				factor = 0
+				check_variable = { interest_rate > 8 }
 			}
 		}
 	}
@@ -4060,6 +4217,42 @@ focus_tree = {
 			set_temp_variable = { temp_opinion = 10 }
 			change_oligarchs_opinion = yes
 			change_farmers_opinion = yes
+
+			if = { limit = { has_idea = oligarchs }
+				custom_effect_tooltip = if_oligarchs_opinion_at_least_positive_tt
+				effect_tooltip = {
+					random_owned_controlled_state = {
+						limit = {
+							free_building_slots = {
+								building = agriculture
+								size > 0
+							}
+						}
+						add_building_construction = {
+							type = agriculture
+							level = 1
+							instant_build = yes
+						}
+					}
+				}
+				hidden_effect = {
+					if = { limit = { oligarchs_opinion > 49 }
+						random_owned_controlled_state = {
+							limit = {
+								free_building_slots = {
+									building = agriculture
+									size > 0
+								}
+							}
+							add_building_construction = {
+								type = agriculture
+								level = 1
+								instant_build = yes
+							}
+						}
+					}
+				}
+			}
 		}
 
 		ai_will_do = {
@@ -4092,20 +4285,19 @@ focus_tree = {
 					}
 				}
 				add_building_construction = {
-					type = synthetic_refinery
-					instant_build = yes
-					level = 1
-				}
-				add_building_construction = {
 					type = fuel_silo
 					instant_build = yes
-					level = 1
+					level = 2
 				}
 			}
 		}
 
 		ai_will_do = {
 			base = 1
+			modifier = {
+				factor = 0
+				check_variable = { interest_rate > 8 }
+			}
 		}
 	}
 
@@ -4132,7 +4324,7 @@ focus_tree = {
 		}
 
 		ai_will_do = {
-			base = 1
+			base = 10
 		}
 	}
 
@@ -4148,13 +4340,12 @@ focus_tree = {
 
 		prerequisite = { focus = NIG_homegrown_design }
 		search_filters = { FOCUS_FILTER_RESEARCH }
+
 		available = {
 			has_opinion = { target = USA value > 19 }
 			NOT = { has_war_with = USA }
 		}
-		ai_will_do = {
-			base = 1
-		}
+
 		completion_reward = {
 			log = "[GetDateText]: [This.GetName]: focus NIG_browning_contracts"
 			add_tech_bonus = {
@@ -4163,6 +4354,10 @@ focus_tree = {
 				bonus = 0.50
 				category = CAT_inf_wep
 			}
+		}
+
+		ai_will_do = {
+			base = 1
 		}
 	}
 
@@ -4179,9 +4374,7 @@ focus_tree = {
 		prerequisite = { focus = NIG_homegrown_design }
 
 		search_filters = { FOCUS_FILTER_EQUIPMENT }
-		ai_will_do = {
-			base = 1
-		}
+
 		completion_reward = {
 			log = "[GetDateText]: [This.GetName]: focus NIG_consolidations_of_arms"
 			add_equipment_to_stockpile = {
@@ -4191,6 +4384,10 @@ focus_tree = {
 			}
 			set_temp_variable = { treasury_change = -0.75 }
 			modify_treasury_effect = yes
+		}
+
+		ai_will_do = {
+			base = 1
 		}
 	}
 
@@ -4212,13 +4409,18 @@ focus_tree = {
 
 		search_filters = { FOCUS_FILTER_INDUSTRY }
 
-		ai_will_do = {
-			base = 1
-		}
 		completion_reward = {
 			log = "[GetDateText]: [This.GetName]: focus NIG_progressive_development"
 			one_random_industrial_complex = yes
 			one_office_construction = yes
+		}
+
+		ai_will_do = {
+			base = 1
+			modifier = {
+				add = 10
+				check_variable = { interest_rate < 8 }
+			}
 		}
 	}
 
@@ -4246,6 +4448,10 @@ focus_tree = {
 
 		ai_will_do = {
 			base = 1
+			modifier = {
+				add = 15
+				has_stability < 0.5
+			}
 		}
 	}
 
@@ -4271,6 +4477,7 @@ focus_tree = {
 			add_ideas = idea_focus_environmental_policy
 			set_temp_variable = { temp_opinion = -5 }
 			change_small_medium_business_owners_opinion = yes
+			change_industrial_conglomerates_opinion = yes
 		}
 
 		ai_will_do = {
@@ -4329,11 +4536,12 @@ focus_tree = {
 			add_relative_party_popularity = yes
 			add_resource = {
 				type = aluminium
-				amount = 3
+				amount = 5
 				state = 332
 			}
 			set_temp_variable = { treasury_change = -2 }
 			modify_treasury_effect = yes
+			one_random_synthetic_refinery = yes
 		}
 
 		ai_will_do = {
