@@ -1256,7 +1256,7 @@ technologies = {
 
 	genetically_modified_crops = {
 		productivity_growth_modifier = 0.2
-		agricolture_productivity_modifier = 0.25
+		agricolture_productivity_modifier = 0.15
 		research_cost = 1.5
 		start_year = 2000
 
