@@ -29,6 +29,8 @@
  display_small_medium_business_owners_opinion: "Opinion of §Y$small_medium_business_owners$§! changes by [?temp_opinion|+0] (Current: [SMBO_opinion_display])\n"
  display_small_medium_business_owners_status_tt: "§Y$small_medium_business_owners$§! [election_status]\n"
 
+ if_small_medium_business_owners_opinion_at_least_positive_tt: "\nIf §Y$small_medium_business_owners$§! opinion is at least 50 (Current: [SMBO_opinion_display]):\n"
+
  # International Bankers
  international_bankers: "International Bankers"
  international_bankers_desc: "When the big banks and the financial industries manage to integrate themselves into the everyday lives of a nation's citizenry, they become essential to economic growth and stability. Wielding their influence over the populace, the multinational industries establish significant political power over government policy and regulation."
@@ -38,6 +40,8 @@
  negative_intb_tt: "§R[?THIS.international_bankers_opinion|2]§!"
  neutral_intb_tt: "§Y[?THIS.international_bankers_opinion|2]§!"
  display_international_bankers_opinion: "Opinion of §Y$international_bankers$§! changes by [?temp_opinion|+0] (Current: [INTB_opinion_display])\n"
+
+ if_international_bankers_opinion_at_least_positive_tt: "\nIf §Y$international_bankers$§! opinion is at least 50 (Current: [INTB_opinion_display]):\n"
 
  # Fossil Fuel Industry
  VEN_fossil_fuel_industry: "PDVSA"
