@@ -8385,39 +8385,40 @@
  NIC.Monarchist_desc: ""
  NIC.oligarchism: "£generic_oligarchism_small Los Tarzanes (LT)"
  NIC.oligarchism_desc: ""
- NIG.conservatism: "£NIG_western_conservative United Nigeria People's Party"
+ # Nigeria
+ NIG.conservatism: "£NIG_western_conservative (UNPP) - United Nigeria People's Party"
  NIG.conservatism_icon: "£NIG_western_conservative"
  NIG.conservatism_desc: ""
- NIG.liberalism: "£NIG_western_liberal Fresh Democratic Party"
+ NIG.liberalism: "£NIG_western_liberal (FDP) - Fresh Democratic Party"
  NIG.liberalism_icon: "£NIG_western_liberal"
  NIG.liberalism_desc: ""
- NIG.socialism: "£NIG_western_social_democrat All Nigeria People's Party (ANPP)"
+ NIG.socialism: "£NIG_western_social_democrat (ANPP) - All Nigeria People's Party"
  NIG.socialism_icon: "£NIG_western_social_democrat"
  NIG.socialism_desc: "Social Democrat - The All Nigeria People's Party was founded in 1998 as a generic right wing conservative party. However, it has slowly lost its right leaning tendencies that drew a majority of its support from Northern Nigeria. Now, it actually comprises many elements of social democracy and left leaning ideological thought."
- NIG.socialism_2017: "£NIG_western_social_democrat_late All Progressives Congress (APC)"
+ NIG.socialism_2017: "£NIG_western_social_democrat_late (APC) - All Progressives Congress"
  NIG.socialism_2017_icon: "£NIG_western_social_democrat_late"
  NIG.socialism_2017_desc: "Social Democrat - APC was formed from the merger of All Nigeria People's Party, Action Congress of Nigeria, All Progressives Grand Alliance and the Congress for Progressive Change "
- NIG.Communist-State: "£NIG_emerging_communism Democratic Socialist Movement"
+ NIG.Communist-State: "£NIG_emerging_communism (DSM) - Democratic Socialist Movement"
  NIG.Communist-State_icon: "£NIG_emerging_communism"
  NIG.Communist-State_desc: ""
- NIG.anarchist_communism: "£NIG_emerging_left_wing_radical Socialist Party of Nigeria"
+ NIG.anarchist_communism: "£NIG_emerging_left_wing_radical (SPN) - Socialist Party of Nigeria"
  NIG.anarchist_communism_icon: "£NIG_emerging_left_wing_radical"
  NIG.anarchist_communism_desc: ""
  NIG.Caliphate: "£NIG_salafist_jihadism Boko Haram"
  NIG.Caliphate_icon: "£NIG_salafist_jihadism"
- NIG.Caliphate_desc: "Boko Haram is an Salafist extremist group primarily based in the north eastern state of Borno in Nigeria. They promote institution of Shari'a Law and operating under the pretense to unite the country under an Islamic banner. Boko Haram is one of the most prominent jihadist groups in West Africa."
- NIG.Neutral_conservatism: "£NIG_non_aligned_conservative People's Democratic Party"
+ NIG.Caliphate_desc: "(Salafist Jihadism) - Boko Haram is a Salafist extremist organization primarily based in the northeastern state of Borno in Nigeria. Founded formally in 2002, they advocate for the strict implementation of Sharia Law and operate under the pretense of uniting the country under an Islamic caliphate. Known for their violent insurgency against the Nigerian government and civilian populations, Boko Haram has become one of the most dangerous and prominent jihadist groups in West Africa, with ties to other international terrorist organizations. Their name roughly translates to 'Western education is forbidden,' reflecting their opposition to Western influence in the region."
+ NIG.Neutral_conservatism: "£NIG_non_aligned_conservative (PDP) - People's Democratic Party"
  NIG.Neutral_conservatism_icon: "£NIG_non_aligned_conservative"
  NIG.Neutral_conservatism_desc: "Neutral Conservatives - The People's Democratic Party has continued to receive support from well across the country. However, it draws its greatest strength from the Chrisitan majority in the South. It is mainly a centre-right party in terms of ideology that supports neoliberal market policies. The party remains one of the largest in Nigerian history and continues to dominate on the political battlefields."
- NIG.neutral_Social: "£NIG_non_aligned_social_democrat Unity Party of Nigeria"
+ NIG.neutral_Social: "£NIG_non_aligned_social_democrat (UPN) - Unity Party of Nigeria"
  NIG.neutral_Social_icon: "£NIG_non_aligned_social_democrat"
  NIG.neutral_Social_desc: ""
- NIG.Neutral_Muslim_Brotherhood: "£muslim_brotherhood_small Islamic Movement of Nigeria"
+ NIG.Neutral_Muslim_Brotherhood: "£muslim_brotherhood_small (IMN) - Islamic Movement of Nigeria"
  NIG.Neutral_Muslim_Brotherhood_desc: ""
- NIG.Neutral_green: "£NIG_non_aligned_greens Grassroots Development Party of Nigeria"
+ NIG.Neutral_green: "£NIG_non_aligned_greens (GDP) - Grassroots Development Party of Nigeria"
  NIG.Neutral_green_icon: "£NIG_non_aligned_greens"
  NIG.Neutral_green_desc: ""
- NIG.Nat_Autocracy: "£NIG_nationalist_military_junta Nigerian Armed Forces"
+ NIG.Nat_Autocracy: "£NIG_nationalist_military_junta (NAF) - Nigerian Armed Forces"
  NIG.Nat_Autocracy_icon: "£NIG_nationalist_military_junta"
  NIG.Nat_Autocracy_desc: ""
  NIG.Nat_Populism: "£NIG_nationalist_right_wing_populist Accord"
