@@ -6,6 +6,8 @@ v1.11.3
   - Improved the AIs performance when evaluating whether to push for laws or decisions
   - Improved the AI's willingness to naval invade other countries if they are within range
   - German AI improved, US and GB will keep troops in Germany, until called back or leave fraction
+  - The Debt Assumption AI now has a 90 day cooldown to prevent it from being spammed
+  - The Nigerian AI should be more intelligent in exploring their focus tree to better assuage their economic issues
 
  Balance:
   - Adjusted the political power from 100 to 150 when you succeed in fixing the bankruptcy
@@ -26,6 +28,7 @@ v1.11.3
   - Fixed the broken Bosnian ideas that gave you insane amount of division recovery rate
   - Some Likud focuses now only increase corruption when leader has corruptible trait
   - Added starting intelligence agency to Israel
+  - Reduced the productivity modifier of Agriculture Districts by 10% from the Modernized GMO
 
  Bugfix:
   - Fixed a German MIO giving piercing despite Small Arms not having piercing
@@ -114,6 +117,7 @@ v1.11.3
   - Bulgaria: Focus trees of the Army, Diplomacy, and Economics have been reworked
   - The United Kingdom "Improve our Small Ships" focus now also reduces the costs of corvettes and frigates
   - The United Kingdom naval focuses now gives additional naval experience to the country
+  - Added new Nigerian focus effects and added some more dynamics to make the tree a bit more competitive
 
  Database:
   - Adjusted Ecuador's starting election cycle from 7 years to 4 years
